--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Comedies'
 - !lcsh 'English drama'
 - !lcc 'PR'
+- GITenberg
 title: 'John Bull; Or, The Englishman''s Fireside: A Comedy, in Five Acts'
 url: http://www.gutenberg.org/ebooks/20177
